引入雪花算法生成用户ID
