# docs/swagger.yaml
@@ -7,6 +7,86 @@ paths:
       summary: 发送图片
       tags:
       - 信息模块
+  /contact/LoadCommunity:
+    post:
+      parameters:
+      - description: 用户id
+        in: query
+        name: ownerId
+        type: string
+      - description: 群名称
+        in: query
+        name: name
+        type: string
+      responses:
+        "200":
+          description: code","msg","data“}
+          schema:
+            type: string
+      summary: 加载群列表
+      tags:
+      - 群模块
+  /contact/createCommunity:
+    post:
+      parameters:
+      - description: 用户id
+        in: query
+        name: ownerId
+        type: string
+      - description: 群名称
+        in: query
+        name: name
+        type: string
+      responses:
+        "200":
+          description: code","msg","data“}
+          schema:
+            type: string
+      summary: 新建群
+      tags:
+      - 群模块
+  /deleteRedisMsg:
+    post:
+      parameters:
+      - description: 用户A_id
+        in: query
+        name: userIdA
+        type: string
+      - description: 用户B_id
+        in: query
+        name: userIdB
+        type: string
+      - description: 删除记录数目
+        in: query
+        name: nums
+        type: string
+      responses:
+        "200":
+          description: code","msg","data“}
+          schema:
+            type: string
+      summary: 读取Redis信息
+      tags:
+      - 信息模块
+  /getRedisMsg:
+    post:
+      parameters:
+      - description: 用户A_id
+        in: query
+        name: userIdA
+        type: string
+      - description: 用户B_id
+        in: query
+        name: userIdB
+        type: string
+      responses:
+        "200":
+          description: code","msg","data“}
+          schema:
+            type: string
+      summary: 读取Redis信息
+      tags:
+      - 信息模块
   /index:
     get:
       responses:
@@ -25,7 +105,7 @@ paths:
   /msg/sendUserMsg:
     get:
       responses: {}
-      summary: 发送信息
+      summary: 发送用户信息
       tags:
       - 信息模块
   /toChat:
@@ -46,6 +126,25 @@ paths:
             type: string
       tags:
       - 首页
+  /user/AddFriends:
+    post:
+      parameters:
+      - description: 用户id
+        in: query
+        name: userId
+        type: string
+      - description: 添加用户id
+        in: query
+        name: targetId
+        type: string
+      responses:
+        "200":
+          description: code","msg","data“}
+          schema:
+            type: string
+      summary: 添加好友
+      tags:
+      - 用户模块
   /user/createUser:
     post:
       parameters:
@@ -59,7 +158,7 @@ paths:
         type: string
       - description: 确认密码
         in: query
-        name: repassword
+        name: Identity
         type: string
       responses:
         "200":
